--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@formkit/vue": "^1.6.9",
     "@hookform/resolvers": "^4.1.3",
     "@tailwindcss/vite": "^4.0.17",
+    "@tanstack/vue-query": "^5.71.1",
     "@vue-hook-form/core": "^0.1.0",
     "@vuelidate/core": "^2.0.3",
     "@vuelidate/validators": "^2.0.4",
+    "axios": "^1.8.4",
     "dayjs": "^1.11.13",
     "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
