--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vuelidate/validators": "^2.0.4",
     "axios": "^1.8.4",
     "dayjs": "^1.11.13",
+    "sweetalert2": "^11.17.2",
     "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
