--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "@formkit/vue": "^1.6.9",
     "@hookform/resolvers": "^4.1.3",
+    "@jamescoyle/vue-icon": "^0.1.2",
+    "@mdi/js": "^7.4.47",
     "@tailwindcss/vite": "^4.0.17",
     "@tanstack/vue-query": "^5.71.1",
     "@vue-hook-form/core": "^0.1.0",
@@ -24,6 +26,7 @@
     "sweetalert2": "^11.17.2",
     "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
+    "vue-i18n": "10",
     "vue-router": "^4.5.0",
     "vuetify": "^3.7.19",
     "yup": "^1.6.1"
@@ -40,6 +43,7 @@
     "prettier": "^3.5.3",
     "tailwindcss": "^4.0.17",
     "typescript": "^5.8.2",
+    "unplugin-icons": "^22.1.0",
     "vite": "^6.2.0",
     "vue-eslint-parser": "^10.1.1"
   }
